--- a/大專/報團頁面.html
+++ b/大專/報團頁面.html
@@ -12,50 +12,50 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+        <!-- 中文字型樣式 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
+        rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
     <link rel="stylesheet" href="報團頁面.css">
+    <!-- MDB頭像 -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
 </head>
 
 <body>
-    <!-- 導覽列 -->
-    <!-- LOGO -->
-    <nav class="navbar bg-body-tertiary ">
-        <!-- container容器 -->
-        <div class="container-fluid">
-            <a class="navbar-brand" href="http://127.0.0.1:5500/home.html#">
-                <img src="./logo.png" alt="Logo" width="30" height="36" class="d-inline-block align-text-top">
-                Join
+     <!-- 導覽列 -->
+     <header class="main-header">
+        <div class="container">
+            <a href="" class="Logo">
+                <img src="./Images/logo.png" alt="Logo" width="30" height="36">
+                <h2>Join</h2>
             </a>
-            <!-- 連結網站 -->
-            <nav class="nav">
-                <li><a class="nav-link active" aria-current="page"
-                        href="http://127.0.0.1:5500/LatestNews.html">最新消息</a></li>
-                <li><a class="nav-link" href="#">附近場館</a></li>
-                <li><a class="nav-link" href="http://127.0.0.1:5500/%E7%99%BC%E8%B5%B7%E6%8F%AA%E5%9C%98.html">發起揪團</a>
-                </li>
-                <li><a class="nav-link" href="http://127.0.0.1:5500/%E6%88%91%E7%9A%84%E6%B4%BB%E5%8B%95.html">我的活動</a>
-                </li>
+            <!-- 導覽列文字 -->
+            <nav class="navbar-text">
+                <a href="">最新消息</a>
+                <a href="">附近場館</a>
+                <a href="">發起揪團</a>
+                <a href="">我的活動</a>
             </nav>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <!-- Avatar頭像 -->
-                        <li class="nav-item dropdown">
+                        <li class="nav-item Avatar dropdown">
                             <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                 id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                                    class="rounded-circle" height="22" alt="Portrait of a Woman" loading="lazy" />
+                                <img src="./Images/image5.jpg" class="rounded-circle" width="50" height="50"
+                                    alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li>
-                                    <a class="dropdown-item" href="#">My profile</a>
+                                    <a class="dropdown-item" href="#">登入</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Settings</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Logout</a>
+                                    <a class="dropdown-item" href="#">個人資訊</a>
                                 </li>
                             </ul>
                         </li>
@@ -63,7 +63,7 @@
                 </div>
             </nav>
         </div>
-    </nav>
+    </header>
     <!-- 選擇器 -->
     <div class="container">
         <div class="d-flex flex-row bd-highlight mb-3">
