--- a/大專/發起揪團.html
+++ b/大專/發起揪團.html
@@ -18,58 +18,33 @@
 
 <body>
     <!-- 導覽列 -->
-    <!-- LOGO -->
-    <nav class="navbar bg-body-tertiary ">
-        <!-- container容器 -->
-        <div class="container-fluid">
-            <a class="navbar-brand" href="http://127.0.0.1:5500/home.html#">
-                <img src="./logo.png" alt="Logo" width="30" height="36" class="d-inline-block align-text-top">
-                Join
+    <header class="main-header">
+        <div class="container">
+            <a href="" class="Logo">
+                <img src="./Images/logo.png" alt="Logo" width="30" height="36">
+                <h2>Join</h2>
             </a>
-            <!-- 連結網站 -->
-            <nav class="nav">
-                <li><a class="nav-link active" aria-current="page"
-                        href="http://127.0.0.1:5500/LatestNews.html">最新消息</a></li>
-                <li><a class="nav-link" href="#">附近場館</a></li>
-                <li><a class="nav-link" href="http://127.0.0.1:5500/%E7%99%BC%E8%B5%B7%E6%8F%AA%E5%9C%98.html">發起揪團</a></li>
-                <li><a class="nav-link" href="http://127.0.0.1:5500/%E6%88%91%E7%9A%84%E6%B4%BB%E5%8B%95.html">我的活動</a></li>
+            <!-- 導覽列文字 -->
+            <nav class="navbar">
+                <a href="">最新消息</a>
+                <a href="">附近場館</a>
+                <a href="">發起揪團</a>
+                <a href="">我的活動</a>
             </nav>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <ul class="navbar-nav">
-                        <!-- Avatar頭像 -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
-                                id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
-                                aria-expanded="false">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img (31).webp"
-                                    class="rounded-circle" height="22" alt="Portrait of a Woman" loading="lazy" />
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li>
-                                    <a class="dropdown-item" href="#">My profile</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Settings</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Logout</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <ul>
+                <li><a href="http://127.0.0.1:5500/%E5%A4%A7%E5%B0%88/registerAccount.html">註冊</a></li>
+                <li><a href="http://127.0.0.1:5500/%E5%A4%A7%E5%B0%88/login.html">登入</a></li>
+            </ul>
         </div>
-    </nav>
+    </header>
     <!-- 揪團框 -->
-    <div class="container">
+    <div class="container2">
         <!-- 團名 -->
         <div class="GroupName">
             <input type="text" value="團名">
         </div>
         <!-- 圖 & 文字說明 -->
-        <div class="container2">
+        <div class="container3">
             <!--Image-->
             <div>
                 <div class="mb-4 d-flex justify-content-center">
