--- a/FinalProWeb/home.html
+++ b/FinalProWeb/home.html
@@ -19,9 +19,10 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
         rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/navbar&footer.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/home.css">
     <!-- MDB頭像 -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="./src/main/webapp/Js/mdb.min.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
     <header class="main-header">
         <div class="container">
             <a href="" class="Logo">
-                <img src="./Images/logo.png" alt="Logo" width="30" height="36">
+                <img src="./src/main/webapp/Images/logo.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
@@ -47,7 +48,7 @@
                             <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                 id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="./Images/user.png" class="rounded-circle" width="50" height="50"
+                                <img src="./src/main/webapp/Images/user.png" class="rounded-circle" width="50" height="50"
                                     alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -70,15 +71,15 @@
         <div class="carousel-inner">
             <!-- 第一張圖片 active-->
             <div class="carousel-item active">
-                <img class="slide-pic" src="./Images/img11.jpg" alt="slide1">
+                <img class="slide-pic" src="./src/main/webapp/Images/img11.jpg" alt="slide1">
             </div>
             <!-- 第二張圖片 -->
             <div class="carousel-item">
-                <img class="slide-pic" src="./Images/img12.jpg" alt="slide2">
+                <img class="slide-pic" src="./src/main/webapp/Images/img12.jpg" alt="slide2">
             </div>
             <!-- 第三張圖片 -->
             <div class="carousel-item">
-                <img class="slide-pic" src="./Images/img9.jpg" alt="slide3">
+                <img class="slide-pic" src="./src/main/webapp/Images/img9.jpg" alt="slide3">
             </div>
             <!-- 按鈕 -->
             <!-- <button type="button" class="btn btn3 btn-outline-light">揪團去</button> -->
@@ -104,7 +105,6 @@
             <button type="radio" data-bs-target="#slideshow" data-bs-slide-to="0" class="active"></button>
             <button type="radio" data-bs-target="#slideshow" data-bs-slide-to="1"></button>
             <button type="radio" data-bs-target="#slideshow" data-bs-slide-to="2"></button>
-
         </div>
     </div>
     <div class="container2">
@@ -115,7 +115,7 @@
     <!-- card -->
     <div class="card-group">
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -187,7 +187,7 @@
     </div>
     <div class="card-group">
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -201,7 +201,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -215,7 +215,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -229,7 +229,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
@@ -243,7 +243,7 @@
             </div>
         </div>
         <div class="card" style="width: 20rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
             </div>
