--- a/FinalProWeb/joinTeam.html
+++ b/FinalProWeb/joinTeam.html
@@ -19,17 +19,18 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
         rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
-    <link rel="stylesheet" href="報團頁面.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/joinTeam.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/navbar&footer.css">
     <!-- MDB頭像 -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="./src/main/webapp/Js/mdb.min.js"></script>
 </head>
 
 <body>
      <!-- 導覽列 -->
-     <header class="main-header">
+    <header class="main-header">
         <div class="container">
             <a href="" class="Logo">
-                <img src="./Images/logo.png" alt="Logo" width="30" height="36">
+                <img src="./src/main/webapp/Images/logo.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
@@ -47,7 +48,7 @@
                             <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                 id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="./Images/image5.jpg" class="rounded-circle" width="50" height="50"
+                                <img src="./src/main/webapp/Images/user.png" class="rounded-circle" width="50" height="50"
                                     alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -98,7 +99,7 @@
     <div>
         <!-- card -->
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -114,7 +115,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -130,7 +131,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -146,7 +147,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -162,7 +163,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -181,7 +182,7 @@
     <div>
         <!-- card -->
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -197,7 +198,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -213,7 +214,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -229,7 +230,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
@@ -245,7 +246,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="Images/badminton.jpg" class="card-img-top" alt="...">
+            <img src="./src/main/webapp/Images/badminton.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">團名</h5>
                 <p class="card-text">揪團資訊</p>
