--- a/FinalProWeb/initiatedTeam.html
+++ b/FinalProWeb/initiatedTeam.html
@@ -12,8 +12,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <!-- 中文字型樣式 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
+        rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
-    <link rel="stylesheet" href="發起揪團.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/initiatedTeam.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/navbar&footer.css">
+    <!-- MDB頭像 -->
+    <script type="text/javascript" src="./src/main/webapp/Js/mdb.min.js"></script>
+
 </head>
 
 <body>
@@ -21,20 +31,39 @@
     <header class="main-header">
         <div class="container">
             <a href="" class="Logo">
-                <img src="./Images/logo.png" alt="Logo" width="30" height="36">
+                <img src="./src/main/webapp/Images/logo.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
-            <nav class="navbar">
+            <nav class="navbar-text">
                 <a href="">最新消息</a>
                 <a href="">附近場館</a>
                 <a href="">發起揪團</a>
                 <a href="">我的活動</a>
             </nav>
-            <ul>
-                <li><a href="http://127.0.0.1:5500/%E5%A4%A7%E5%B0%88/registerAccount.html">註冊</a></li>
-                <li><a href="http://127.0.0.1:5500/%E5%A4%A7%E5%B0%88/login.html">登入</a></li>
-            </ul>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <ul class="navbar-nav">
+                        <!-- Avatar頭像 -->
+                        <li class="nav-item Avatar dropdown">
+                            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
+                                id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
+                                aria-expanded="false">
+                                <img src="./src/main/webapp/Images/user.png" class="rounded-circle" width="50"
+                                    height="50" alt="Portrait of a Woman" loading="lazy" />
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li>
+                                    <a class="dropdown-item" href="#">登入</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">個人資訊</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
     </header>
     <!-- 揪團框 -->
@@ -48,7 +77,7 @@
             <!--Image-->
             <div>
                 <div class="mb-4 d-flex justify-content-center">
-                    <img src="./Images/logo2.png" alt="example placeholder" style="width: 600px;height: 400px;" />
+                    <img src="./src/main/webapp/Images/logo2.png" alt="example placeholder" style="width: 600px;height: 400px;" />
                 </div>
             </div>
             <!-- 文字表單 -->
@@ -57,29 +86,39 @@
                     <div>地點
                         <select name="place">
                             <option required>請選擇你想參加的地點</option>
-                            <option value="">基隆</option><option value="">宜蘭</option>
-                            <option value="">台北</option><option value="">新北</option>
-                            <option value="">桃園</option><option value="">新竹</option>
-                            <option value="">苗栗</option><option value="">台中</option>
-                            <option value="">彰化</option><option value="">南投</option>
-                            <option value="">雲林</option><option value="">嘉義</option>
-                            <option value="">臺南</option><option value="">高雄</option>
-                            <option value="">屏東</option><option value="">花蓮</option>
-                            <option value="">臺東</option><option value="">澎湖</option>
-                            <option value="">金門</option><option value="">連江</option>
+                            <option value="">基隆</option>
+                            <option value="">宜蘭</option>
+                            <option value="">台北</option>
+                            <option value="">新北</option>
+                            <option value="">桃園</option>
+                            <option value="">新竹</option>
+                            <option value="">苗栗</option>
+                            <option value="">台中</option>
+                            <option value="">彰化</option>
+                            <option value="">南投</option>
+                            <option value="">雲林</option>
+                            <option value="">嘉義</option>
+                            <option value="">臺南</option>
+                            <option value="">高雄</option>
+                            <option value="">屏東</option>
+                            <option value="">花蓮</option>
+                            <option value="">臺東</option>
+                            <option value="">澎湖</option>
+                            <option value="">金門</option>
+                            <option value="">連江</option>
                         </select>
                         <select>
                             <option value="">中區</option>
                         </select>
                         <input type="text" value="大源路">
                     </div>
-                    
+
                     <div>
                         <input class="form-control" type="text" placeholder="最低人數" aria-label="default input example">
                         <input class="form-control" type="text" placeholder="人數上限" aria-label="default input example">
                         <input class="form-control" type="text" placeholder="聯絡方式" aria-label="default input example">
                     </div>
-                    <br>    
+                    <br>
                     <div>
                         場地預約:
                         <div class="form-check form-check-inline">
