--- a/FinalProWeb/login.html
+++ b/FinalProWeb/login.html
@@ -19,9 +19,10 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
         rel="stylesheet">
     <!-- 連結CSS外部檔案 -->
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/login.css">
+    <link rel="stylesheet" href="./src/main/webapp/css/navbar&footer.css">
     <!-- MDB頭像 -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="./src/main/webapp/Js/mdb.min.js"></script>
     
 </head>
 
@@ -30,7 +31,7 @@
    <header class="main-header">
     <div class="container">
         <a href="" class="Logo">
-            <img src="./Images/logo.png" alt="Logo" width="30" height="36">
+            <img src="./src/main/webapp/Images/logo.png" alt="Logo" width="30" height="36">
             <h2>Join</h2>
         </a>
         <!-- 導覽列文字 -->
@@ -48,7 +49,7 @@
                         <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                             id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
                             aria-expanded="false">
-                            <img src="./Images/user.png" class="rounded-circle" width="50" height="50"
+                            <img src="./src/main/webapp/Images/user.png" class="rounded-circle" width="50" height="50"
                                 alt="Portrait of a Woman" loading="lazy" />
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -116,7 +117,7 @@
         </div>
     </div>
     <!-- 連接Js外部檔案 -->
-    <script src="Js/login.js"></script>
+    <script src="./src/main/webapp/Js/login.js"></script>
 </body>
 
 </html>
