--- a/FinalProWeb/member.html
+++ b/FinalProWeb/member.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>個人資料</title>
+    <title>會員資料</title>
     <!-- 響應式網站 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Boostrap 導入程式 -->
