--- a/FinalProWeb/src/main/webapp/index.html
+++ b/FinalProWeb/src/main/webapp/index.html
@@ -14,8 +14,8 @@
         crossorigin="anonymous"></script>
     <!-- 中文字型樣式 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&family=Noto+Sans+JP:wght@700&family=Noto+Sans+TC:wght@900&display=swap"
         rel="stylesheet">
@@ -30,16 +30,16 @@
     <!-- 導覽列 -->
     <header class="main-header">
         <div class="container">
-            <a href="" class="Logo">
-                <img src="./Images/logo3.png" alt="Logo">
+            <a href="./index.html" class="Logo">
+                <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
             <nav class="navbar-text">
-                <a href="">最新消息</a>
-                <a href="">尋找場館</a>
-                <a href="">發起揪團</a>
-                <a href="">我的活動</a>
+                <a href="./latestNews.html">最新消息</a>
+                <a href="./findGym.html">附近場館</a>
+                <a href="./post.html">發起揪團</a>
+                <a href="./joinTeam.html">加入報團</a>
             </nav>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
