--- a/FinalProWeb/src/main/webapp/LatestNews.html
+++ b/FinalProWeb/src/main/webapp/LatestNews.html
@@ -26,20 +26,20 @@
 </head>
 
 <body>
-    <!-- 導覽列 -->
-    <header class="main-header">
-        <div class="container">
-            <a href="" class="Logo">
-                <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
-                <h2>Join</h2>
-            </a>
-            <!-- 導覽列文字 -->
-            <nav class="navbar-text">
-                <a href="">最新消息</a>
-                <a href="">附近場館</a>
-                <a href="">發起揪團</a>
-                <a href="">我的活動</a>
-            </nav>
+        <!-- 導覽列 -->
+        <header class="main-header">
+            <div class="container">
+                <a href="./index.html" class="Logo">
+                    <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
+                    <h2>Join</h2>
+                </a>
+                <!-- 導覽列文字 -->
+                <nav class="navbar-text">
+                    <a href="./latestNews.html">最新消息</a>
+                    <a href="./findGym.html">附近場館</a>
+                    <a href="./post.html">發起揪團</a>
+                    <a href="./joinTeam.html">加入報團</a>                
+                </nav>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
