--- a/FinalProWeb/src/main/webapp/findGym.html
+++ b/FinalProWeb/src/main/webapp/findGym.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>尋找場館</title>
+    <title>附近場館</title>
     <!-- 響應式網站 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Boostrap 導入程式 -->
@@ -29,16 +29,16 @@
     <!-- 導覽列 -->
     <header class="main-header">
         <div class="container">
-            <a href="" class="Logo">
+            <a href="./index.html" class="Logo">
                 <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
             <nav class="navbar-text">
-                <a href="">最新消息</a>
-                <a href="">附近場館</a>
-                <a href="">發起揪團</a>
-                <a href="">我的活動</a>
+                <a href="./latestNews.html">最新消息</a>
+                <a href="./findGym.html">附近場館</a>
+                <a href="./post.html">發起揪團</a>
+                <a href="./joinTeam.html">加入報團</a>
             </nav>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -65,9 +65,9 @@
             </nav>
         </div>
     </header>
-   <div class="wrapper">
+    <div class="wrapper">
 
-   </div>
+    </div>
     <!-- footer頁尾 -->
     <footer>
         <div class="footer-container">
