--- a/FinalProWeb/src/main/webapp/joinTeam.html
+++ b/FinalProWeb/src/main/webapp/joinTeam.html
@@ -26,19 +26,19 @@
 </head>
 
 <body>
-     <!-- 導覽列 -->
+         <!-- 導覽列 -->
     <header class="main-header">
         <div class="container">
-            <a href="" class="Logo">
+            <a href="./index.html" class="Logo">
                 <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
             <nav class="navbar-text">
-                <a href="">最新消息</a>
-                <a href="">附近場館</a>
-                <a href="">發起揪團</a>
-                <a href="">我的活動</a>
+                <a href="./latestNews.html">最新消息</a>
+                <a href="./findGym.html">附近場館</a>
+                <a href="./post.html">發起揪團</a>
+                <a href="./joinTeam.html">加入報團</a>                
             </nav>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -95,8 +95,8 @@
                     <option value="2">Two</option>
                     <option value="3">Three</option>
                 </select>
-                <button type="button" class="btn btn-outline-dark">放大鏡</button>
-                <button type="button" class="btn btn2 btn-outline-dark">看更多</button>
+                <button type="button" class="btn btn-outline-dark">查詢</button>
+                
             </div>
         </div>
     
