--- a/FinalProWeb/src/main/webapp/post.html
+++ b/FinalProWeb/src/main/webapp/post.html
@@ -30,16 +30,16 @@
     <!-- 導覽列 -->
     <header class="main-header">
         <div class="container">
-            <a href="" class="Logo">
+            <a href="./index.html" class="Logo">
                 <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
                 <h2>Join</h2>
             </a>
             <!-- 導覽列文字 -->
             <nav class="navbar-text">
-                <a href="">最新消息</a>
-                <a href="">附近場館</a>
-                <a href="">發起揪團</a>
-                <a href="">我的活動</a>
+                <a href="./latestNews.html">最新消息</a>
+                <a href="./findGym.html">附近場館</a>
+                <a href="./post.html">發起揪團</a>
+                <a href="./joinTeam.html">加入報團</a>
             </nav>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -49,8 +49,8 @@
                             <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                 id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="./Images/user.png" class="rounded-circle" width="50"
-                                    height="50" alt="Portrait of a Woman" loading="lazy" />
+                                <img src="./Images/user.png" class="rounded-circle" width="50" height="50"
+                                    alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li>
