--- a/FinalProWeb/src/main/webapp/blank.html
+++ b/FinalProWeb/src/main/webapp/blank.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>最新消息</title>
+    <title>blank</title>
     <!-- 響應式網站 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Boostrap 導入程式 -->
