--- a/FinalProWeb/src/main/webapp/member.html
+++ b/FinalProWeb/src/main/webapp/member.html
@@ -90,7 +90,7 @@
                         <div class="member-avatar">
                             <div class="text-center">
                                 <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png"
-                                    class="avatar img-circle img-thumbnail" alt="avatar">
+                                id="Icon" class="avatar img-circle img-thumbnail" alt="avatar">
                                 <h6>更換頭像</h6>
                                 <input type="file" class="text-center center-block file-upload select">
                             </div>
@@ -105,16 +105,12 @@
 
                                 <legend>會員資料</legend><br><br>
                                 <div class="project">
-                                    <label for="memberName">姓名(暱稱)</label>
+                                    <label for="memberName">會員姓名</label>
                                     <input type="text" id="memberName" name="memberName"><br><br>
                                 </div>
                                 <div class="project">
-                                    <label for="email">信箱</label>
-                                    <input type="email" id="email" name="email"><br><br>
-                                </div>
-                                <div class="project">
-                                    <label for="account">會員帳號</label>
-                                    <input type="text" id="account" name="account"><br><br>
+                                    <label for="memberAccount">帳號</label>
+                                    <input type="email" id="email" name="memberAccount"><br><br>
                                 </div>
                                 <div class="project">
                                     <label for="password">會員密碼</label>
