--- a/FinalProWeb/src/main/webapp/index.html
+++ b/FinalProWeb/src/main/webapp/index.html
@@ -49,7 +49,7 @@
                             <a class="nav-link dropdown-toggle d-flex align-items-center" href="#"
                                 id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown"
                                 aria-expanded="false">
-                                <img src="./Images/user.png" class="rounded-circle" width="50" height="50"
+                                <img src="./Images/user.png" id="Icon" class="rounded-circle" width="50" height="50"
                                     alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
