--- a/FinalProWeb/src/main/webapp/login.html
+++ b/FinalProWeb/src/main/webapp/login.html
@@ -33,8 +33,8 @@
                         <h1>Join 揪羽球</h1>
                     
                     <div class="group">
-                        <label for="user-account">帳號(email)</label>
-                        <input type="email" name="account" id="user-account">
+                        <label for="user-account">帳號 ( Email )</label>
+                        <input type="email" name="account" id="user-account" placeholder="請輸入Email">
                     </div>
                     <div class="group">
                         <label for="user-password">密碼</label>
@@ -52,20 +52,20 @@
                 <form class="form">
                     <h2>Join 揪羽球</h2>
                     <div class="group">
-                        <label for="user-id">使用者名稱(暱稱)</label>
-                        <input required type="text" name="memberName" id="user-id">
+                        <label for="memberName">會員姓名( 暱稱 )</label>
+                        <input required type="text" name="memberName" id="memberName" >
                     </div>
                     <div class="group">
-                        <label for="user-account">帳號(email)</label>
-                        <input required type="email" name="account" id="user-account">
+                        <label for="memberAccount">帳號 ( Email )</label>
+                        <input required type="email" name="account" id="memberAccount" placeholder="請輸入Email">
                     </div>
                     <div class="group">
-                        <label for="user-password">密碼</label>
-                        <input required type="password" name="password" id="user-password">
+                        <label for="password">密碼</label>
+                        <input required type="password" name="password" id="password">
                     </div>
                     <div class="group">
-                        <label for="user-password">重複密碼</label>
-                        <input required type="password" name="password" id="user-password">
+                        <label for="password">重複密碼</label>
+                        <input required type="password" name="password" id="password">
                     </div>
                     <div class="btn-group">
                         <button type="submit">註冊</button>
