--- a/FinalProWeb/src/main/webapp/member.html
+++ b/FinalProWeb/src/main/webapp/member.html
@@ -69,7 +69,6 @@
 
             </ul>
         </nav>
-        <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
@@ -99,7 +98,7 @@
                     </div>
                     <!-- 個人資料表 -->
                     <div class="member-area">
-                        <div class="member">
+                        <div class="member member-PI">
 
                             <form>
 
@@ -145,10 +144,9 @@
                 </div>
             </div>
         </div>
-        <!-- /#page-content-wrapper -->
 
     </div>
-    <!-- /#wrapper -->
+    
 </body>
 
 </html>
