--- a/FinalProWeb/src/main/webapp/index.html
+++ b/FinalProWeb/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/navbar&footer.css"> 
     <link rel="stylesheet" href="./css/index.css">
     <!-- 連接Js外部檔案 -->
-    <script src="./Js/fontlink.js"></script>
+    <script src="./Js/index.js"></script>
     <!-- MDB頭像 --> 
     <script type="text/javascript" src="./Js/mdb.min.js"></script> 
 </head> 
