--- a/FinalProWeb/src/main/webapp/login.html
+++ b/FinalProWeb/src/main/webapp/login.html
@@ -15,7 +15,7 @@
     <!-- 連結CSS外部檔案 -->
     <link rel="stylesheet" href="./css/login.css">
     <!-- 連接Js外部檔案 -->
-    <script src="./Js/fontlink.js"></script>
+    <script src="./Js/index.js"></script>
 </head>
 
 <body>
