--- a/FinalProWeb/src/main/webapp/blank.html
+++ b/FinalProWeb/src/main/webapp/blank.html
@@ -15,7 +15,7 @@
     <!-- 連結CSS外部檔案 -->
     <link rel="stylesheet" href="./css/navbar&footer.css">
     <!-- 連接Js外部檔案 -->
-    <script src="./Js/fontlink.js"></script>
+    <script src="./Js/index.js"></script>
     <!-- MDB頭像 -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
 </head>
