--- a/FinalProWeb/src/main/webapp/findGym.html
+++ b/FinalProWeb/src/main/webapp/findGym.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/LatestNews.css">
     <link rel="stylesheet" href="./css/navbar&footer.css">
     <!-- 連接Js外部檔案 -->
-    <script src="./Js/fontlink.js"></script>
+    <script src="./Js/index.js"></script>
     <!-- MDB頭像 -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
 </head>
