--- a/FinalProWeb/src/main/webapp/participate.html
+++ b/FinalProWeb/src/main/webapp/participate.html
@@ -23,8 +23,7 @@
   <!-- 連結CSS外部檔案 -->
   <link rel="stylesheet" href="./css/sidebar.css">
   <!-- 連結Js外部檔案 -->
-  <script src="./Js/sidebar.js"></script>
-  <script src="./Js/fontlink.js"></script>
+  <script src="./Js/index.js"></script>
 </head>
 
 <body>
