--- a/FinalProWeb/src/main/webapp/post.html
+++ b/FinalProWeb/src/main/webapp/post.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/post.css">
     <link rel="stylesheet" href="./css/navbar&footer.css">
     <!-- 連結Js外部檔案 -->
-    <script src="./Js/fontlink.js"></script>
+    <script src="./Js/index.js"></script>
     <!-- MDB頭像 -->
     <script type="text/javascript" src="./Js/mdb.min.js"></script>
 </head>
