--- a/FinalProWeb/src/main/webapp/LatestNews.html
+++ b/FinalProWeb/src/main/webapp/LatestNews.html
@@ -48,12 +48,12 @@
                                     alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li>
-                                    <a class="dropdown-item" href="#">登入</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">個人資訊</a>
-                                </li>
+                                <li> 
+                                    <a class="dropdown-item" href="./login.html">登入</a> 
+                                </li> 
+                                <li> 
+                                    <a class="dropdown-item" href="./login.html">註冊</a> 
+                                </li> 
                             </ul>
                         </li>
                     </ul>
