--- a/FinalProWeb/src/main/webapp/login.html
+++ b/FinalProWeb/src/main/webapp/login.html
@@ -25,8 +25,9 @@
         <div class="container-login">
             <div class="login">
                 <form class="form">
-                    
-                        <h1>Join 揪羽球</h1>
+                    <div class="logo">
+                        <a href="./index.html"><h1>Join 揪羽球</h1></a>
+                    </div>
                     
                     <div class="group">
                         <label for="user-account">帳號 ( Email )</label>
@@ -38,7 +39,6 @@
                     </div>
                     <div class="btn-group">
                         <button type="submit">登入</button>
-                        <button>回首頁</button>
                     </div>
                     <p>您還沒有帳號嗎 ?<a href="#" class="register-link">點擊註冊</a></p>
                 </form>
@@ -46,7 +46,9 @@
             <!-- 註冊畫面 -->
             <div class="register">
                 <form class="form">
-                    <h2>Join 揪羽球</h2>
+                    <div class="logo">
+                        <a href="./index.html"><h1>Join 揪羽球</h1></a>
+                    </div>
                     <div class="group">
                         <label for="memberName">會員姓名( 暱稱 )</label>
                         <input required type="text" name="memberName" id="memberName" >
@@ -65,7 +67,6 @@
                     </div>
                     <div class="btn-group">
                         <button type="submit">註冊</button>
-                        <button>取消</button>
                     </div>
                     <p>您已經擁有帳號嗎 ?<a href="#" class="login-link">返回登入</a></p>
                 </form>
