--- a/FinalProWeb/src/main/webapp/member.html
+++ b/FinalProWeb/src/main/webapp/member.html
@@ -40,16 +40,15 @@
                     </div>
                 </div>
                 <li><a href="#home">首頁</a></li>
-                <li><a href="#about">會員資料</a></li>
-
+                <li><a href="#member">會員資料</a></li>
 
                 <li class="dropdown">
-                    <a href="#works" class="dropdown-toggle" data-toggle="dropdown">活動<span class="caret"></span></a>
+                    <a href="#activity" class="dropdown-toggle" data-toggle="dropdown">活動<span class="caret"></span></a>
                     <ul class="dropdown-menu animated fadeInLeft" role="menu">
                         <div class="dropdown-header">所有活動</div>
-                        <li><a href="#events">日曆</a></li>
+                        <li><a href="#calendar">日曆</a></li>
                         <li><a href="#team">我報名的活動</a></li>
-                        <li><a href="#contact">我發起的活動</a></li>
+                        <li><a href="#post">我發起的活動</a></li>
                     </ul>
                 </li>
                 <li><a href="#art">管理活動</a></li>
