--- a/FinalProWeb/src/main/webapp/post.html
+++ b/FinalProWeb/src/main/webapp/post.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>發起揪團</title>
-    <link rel="shortcut" href="favicon.ico">
     <!-- 響應式網站 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Boostrap 導入程式 -->
@@ -49,12 +48,12 @@
                                     alt="Portrait of a Woman" loading="lazy" />
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li>
-                                    <a class="dropdown-item" href="#">登入</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">個人資訊</a>
-                                </li>
+                                <li> 
+                                    <a class="dropdown-item" href="./login.html">登入</a> 
+                                </li> 
+                                <li> 
+                                    <a class="dropdown-item" href="./login.html">註冊</a> 
+                                </li> 
                             </ul>
                         </li>
                     </ul>
