--- a/FinalProWeb/src/main/webapp/index.html
+++ b/FinalProWeb/src/main/webapp/index.html
@@ -50,10 +50,10 @@
                                 </a> 
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
                                     <li> 
-                                        <a class="dropdown-item" href="#">登入</a> 
+                                        <a class="dropdown-item" href="./login.html">登入</a> 
                                     </li> 
                                     <li> 
-                                        <a class="dropdown-item" href="#">個人資訊</a> 
+                                        <a class="dropdown-item" href="./login.html">註冊</a> 
                                     </li> 
                                 </ul> 
                             </li> 
@@ -78,8 +78,6 @@
                 <div class="carousel-item"> 
                     <img class="slide-pic" src="./Images/img9.jpg" alt="slide3"> 
                 </div> 
-                <!-- 按鈕 --> 
-                <button type="button" class="btn btn3 btn-outline-warning">揪團去</button> 
                 <div class="words"> Let's</div> 
                 <div class="words2"> Get </div> 
                 <div class="words3"> Join </div> 
@@ -105,7 +103,7 @@
         </div> 
         <div class="container2"> 
             <h1>最新揪團</h1> 
-            <button type="button" class="btn btn1  btn-warning">看更多</button> 
+            <button type="button" class="btn btn1 btn-outline-warning">揪團去</button>  
         </div> 
      
         <!-- card --> 
