--- a/FinalProWeb/src/main/webapp/activity.html
+++ b/FinalProWeb/src/main/webapp/activity.html
@@ -27,7 +27,7 @@
         <div class="container">
             <a href="./index.html" class="Logo">
                 <img src="./Images/logo3.png" alt="Logo" width="30" height="36">
-                <h2>Join</h2>
+                <h2 id="custom-h2">Join</h2>
             </a>
             <!-- 導覽列文字 -->
             <nav class="navbar-text">
