--- a/FinalProWeb/src/main/webapp/login.html
+++ b/FinalProWeb/src/main/webapp/login.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="group">
                         <label for="user-password">密碼</label>
-                        <input type="password" name="password" id="user-password">
+                        <input type="password" name="password" id="user-password" >
                     </div>
                     <div class="btn-group">
                         <button type="submit">登入</button>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="group">
                         <label for="password">密碼</label>
-                        <input required type="password" name="password" id="password">
+                        <input required type="password" name="password" id="password" οnkeyup="this.value=this.value.replace(/[^\a-\z\A-\Z0-9]/g,'');">
                     </div>
                     <div class="group">
                         <label for="password">重複密碼</label>
