--- a/FinalProWeb/src/main/webapp/index.html
+++ b/FinalProWeb/src/main/webapp/index.html
@@ -15,11 +15,11 @@
     <!-- 連結CSS外部檔案 --> 
     <link rel="stylesheet" href="./css/navbar&footer.css"> 
     <link rel="stylesheet" href="./css/index.css">
-    <!-- 連接Js外部檔案 -->
-    <script src="./Js/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js%22%3E"></script>
     <!-- MDB頭像 --> 
     <script type="text/javascript" src="./Js/mdb.min.js"></script> 
+    <!-- 連接Js外部檔案 -->
+    <script src="./Js/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head> 
  
 <body> 
