--- a/FinalProWeb/src/main/webapp/test.html
+++ b/FinalProWeb/src/main/webapp/test.html
@@ -3,46 +3,136 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-
-        function readURL(input) {
-
-            if (input.files && input.files[0]) {
-
-                var imageTagID = input.getAttribute("targetID");
-
-                var reader = new FileReader();
-
-                reader.onload = function (e) {
-
-                    var img = document.getElementById(imageTagID);
-
-                    img.setAttribute("src", e.target.result)
-
-                }
-
-                reader.readAsDataURL(input.files[0]);
-
-            }
-
-        }
-
-    </script>
+    <title>測試</title>
+    <!-- 響應式網站 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Boostrap 導入程式 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/css/tether.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js"></script>
+    <!-- 連結CSS外部檔案 -->
+    <link rel="stylesheet" href="./css/sidebar.css">
+    <!-- 連結Js外部檔案 -->
+    <script src="./Js/index.js"></script>
 </head>
 
 <body>
-    <!--Image-->
-    <div>
-        <form action="/somewhere/to/upload" enctype="multipart/form-data">
-            <img id="preview_progressbarTW_img" src="#" height="550px" width="600px" />
-        </form>
-        <input type="file" onchange="readURL(this)" targetID="preview_progressbarTW_img"
-            accept="image/gif, image/jpeg, image/png">
+    <div id="wrapper">
+        <div class="overlay"></div>
+
+        <!-- Sidebar導覽列 -->
+        <nav class="navbar navbar-inverse fixed-top" id="sidebar-wrapper" role="navigation">
+            <ul class="nav sidebar-nav">
+                <div class="sidebar-header">
+                    <img src="./Images/logo3.png" alt="">
+                    <div class="sidebar-brand">
+                        <a href="#">Join揪羽球</a>
+                    </div>
+                </div>
+                <li><a href="#home">首頁</a></li>
+                <li><a href="#member">會員資料</a></li>
+
+                <li class="dropdown">
+                    <a href="#activity" class="dropdown-toggle" data-toggle="dropdown">活動<span class="caret"></span></a>
+                    <ul class="dropdown-menu animated fadeInLeft" role="menu">
+                        <div class="dropdown-header">所有活動</div>
+                        <li><a href="#calendar">日曆</a></li>
+                        <li><a href="#team">我報名的活動</a></li>
+                        <li><a href="#post">我發起的活動</a></li>
+                    </ul>
+                </li>
+                <li><a href="#art">管理活動</a></li>
+                <li><a href="#services">管理會員資料</a></li>
+
+            </ul>
+        </nav>
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <!-- 漢堡按鈕 -->
+            <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
+                <span class="hamb-top"></span>
+                <span class="hamb-middle"></span>
+                <span class="hamb-bottom"></span>
+            </button>
+
+            <!-- 會員區塊 -->
+            <div class="container-PI">
+                <div class="PI">
+
+                    <!-- 頭像區塊 -->
+                    <div class="member-avatar-area">
+                        <!--頭像-->
+                        <div class="member-avatar">
+                            <div class="text-center">
+                                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png"
+                                id="Icon" class="avatar img-circle img-thumbnail" alt="avatar">
+                                <h6>更換頭像</h6>
+                                <input type="file" class="text-center center-block file-upload select">
+                            </div>
+                            </hr><br>
+                        </div>
+                    </div>
+                    <!-- 個人資料表 -->
+                    <div class="member-area">
+                        <div class="member member-PI">
+
+                            <div>
+                                <legend>會員資料</legend><br><br>
+                                <div class="project">
+                                    <label for="memberName">會員姓名</label>
+                                    <input type="text" id="memberName" name="memberName" readonly><br><br>
+                                </div>
+                                <div class="project">
+                                    <label for="memberAccount">帳號</label>
+                                    <input type="email" id="email" name="memberAccount" readonly><br><br>
+                                </div>
+                                <div class="project">
+                                    <label for="password">會員密碼</label>
+                                    <button id="changePwd" onclick="changePwd()">修改密碼</button><br><br>
+                                </div>
+                                <div class="project">
+                                    <label for="phoneNumber">手機號碼</label>
+                                    <input type="text" id="phoneNumber" name="phoneNumber" readonly><br><br>
+                                </div>
+                                <div class="project">
+                                    <label for="birthday">生日</label>
+                                    <input type="date" id="birthday" name="birthday" readonly><br><br>
+                                </div>
+                                <div class="project">
+                                    <label for="gender">性別</label>
+                                    <input type="radio" id="gender1" name="gender" value="1" checked readonly>
+                                    <label for="gender1">男性</label>
+                                    <input type="radio" id="gender2" name="gender" value="2" readonly>
+                                    <label for="gender2">女性</label>
+                                </div>
+                                <div class="btn-group">
+                                    <button id="modify" onclick="modify()">修改資料</button>
+                                    <button id="save" hidden onclick="save()">儲存</button>
+                                    <button id="cancel" hidden onclick="cancel()">取消</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
     </div>
+    
 </body>
 
 </html>
